<resources>
    <string name="app_name">Adosy</string>
    <string name="app_link">adosy.in</string>
    <string name="home1">Blogs</string>
    <string name="home2">Courses</string>
    <string name="home3">Services</string>
    <string name="home4">Contact</string>
    <string name="call_us">+91 9038026497
        \n +91 8240892690</string>
    <string name="location">113, Park Street, Poddar Point, Kolkata 700016</string>
    <string name="email">akhilesh.shaw@adosy.in
        \n gourav.kapoor@adosy.in</string>
    <string name="working_hours">Mon-Fri: 10AM-6PM
            \n Sat : 10AM-3PM</string>
    <string name="list_point">\n✔️ </string>
    <string name="GPSAlertDialogTitle">Set GPS</string>
    <string name="GPSAlertDialogMessage">Kindly enable gps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="developer">swarnava415</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">@string/app_link</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">@string/app_name</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation2">NavigationActivity2</string>
    <string name="title_activity_delete">Delete</string>
    <string name="services_main">We always make sure that we are updated with the latest technologies and provide the same to our clients. We make sure that our clients expand in the digital world.</string>
    <string name="digital_marketing_main">We always make sure that we are updated with the latest technologies and provide the same to our clients. We make sure that our clients expand in the digital world.</string>
    <string name="digital_branding_main">
With our 360° Digital Branding Solutions we can help your business upscale with continuous monitoring and support.

    </string>
    <string name="digital_art_main">
    Digital Art can systematically simplify all your business look. It starts from designing your business look in the digital platform.

    </string>
    <string name="website_development_main">
        We excel in providing the best in class website development services globally. We are experts in making any kind of websites as per your need with a customized budget. We at first understand your business requirement and then act accordingly. For us delivering valuable service is a more important.
    </string>
    <string name="application_development_main">
We have qualified developers who can design your applications as per your specific requirements and needs. With 100% successful application developed in both IOS and Android platform we take pride in being the best Application Developer.
    </string>
    <string name="social_media_marketing_main">
Social Media Marketing Services comprises of various aspects of digital channels that has to be continuously monitored and dealt with seriously. We at Adosy take pride of being the best Social Media Marketing Agency to do so.
    </string>
    <string name="search_engine_optimization_main">
We provide the best SEO services because we understand that staying in the top is very important. We make sure that with our dedicated approach you stay top in the Google Search Engine Rankings.
    </string>
    <string name="paid_per_click_management_main">
PPC Campaigns can be great move towards moving ahead of the competition and reaching the end user with detailed targeting. We at Adosy take pride in running the best paid per click ads campaigns.

    </string>
    <string name="email_marketing_main">
Email Marketing can help you reach out to people in a fast and optimized way. We have been doing Email Marketing for all of our eminent clients and it has brought back fruitful results for them.

    </string>
    <string name="real_estate_branding_main">
With over 10 years of market experience we very well understand the needs and requirements of Real Estate Marketing sector. It is due to our dedicated service we have been proudly associated with great realestate builders.

    </string>
    <string name="educational_branding_main">
We understand that education is big sector and to monetize it’s digital growth 360° Management can be a greatest approach towards building a brand and reaching to the peak with genuine client base.

    </string>
    <string name="hospitality_branding_main">
We understand that hospitality is big sector and to monetize it’s digital growth 360° Management can be a greatest approach towards building a brand and reaching to the peak with genuine client base.

    </string>
    <string name="industrial_branding_main">
We understand that Industries are a big sector and to monetize it’s digital growth 360° Management can be a greatest approach towards building a brand and reaching to the peak with genuine client base.

    </string>
    <string name="retail_branding_main">
We understand that Retail is a big sector and to monetize it’s digital growth 360° Management can be a greatest approach towards building a brand and reaching to the peak with genuine client base.

    </string>
    <string name="automobile_branding_main">
We understand that Automobile is a big sector and to monetize it’s digital growth 360° Management can be a greatest approach towards building a brand and reaching to the peak with genuine client base.

    </string>
    <string name="drone_videography_main">
We use the best in class drone to upscale the digital network of your business. Drone Shoot video involves taking aerial shot of your business to editing the videos in very presentable way.

    </string>
    <string name="_d_animation_main">
We provide 3D Animation services globally. With are dedicated team we use advance software’s that can create great 3D videos and pictures just the way you imagine. We take pride in best 3D Animation Service Provider.

    </string>
    <string name="miniature_models_main">
Turn your idea’s and concepts into accurate 3D scale miniature replica models using a variety of modern materials in a modest budget. Depending on the scale and the details in the model, we use a mix of 3D printing, Laser cutting and expert artisan-ship for bringing out the best to our customers.

    </string>
    <string name="brochure_designing_main">
With our years of experience and expertise in crafting company brochure designs, we have mastered the art of creating impressive brochures of various styles like bi-fold brochure, tri-fold brochure, business presentation brochure, flyers and leaflets.

    </string>
    <string name="logo_designing_main">
Think about some of the iconic brands you remember – the moment you see their logo, the entire brand or company name as well as their history comes into mind. This is how powerful a logo can be. Our experienced logo designers know how to make the perfect mix of symbols, calligraphy, design art and other aesthetic graphical elements to create such an effective logo. The logo evokes emotions and sensations related to your brand and helps build recall to ultimately grow your customer base.

    </string>
    <string name="content_writing_main">
Are you looking for a professional content writing company? From developing innovative content copies with a creative blend of SEO articles, gripping webpage writing to informative blogs and enticing headlines that get you humongous web traffic, Adosy can transform your ideas into meaningful words to tell your story that has never been told before.

        </string>
    <string name="dynamic_website_list">
        Free Domain and Hosting
        \n 7 Pager website
        \n SEO Optimized
        \n 1 Business Email Id
        \n And Many More
    </string>
    <string name="dynamic_website_desc">
        We make websites that are actually fast and SEO-Optimized. We make sure that your website is upgraded with the latest technological updates.
    </string>
    <string name="dynamic_website_price">
        20,000
    </string>
    <string name="e_commerce_website_list">
        Free Domain and Hosting
        \n Client Login Portal
        \n Delivery Partner Support
        \n SEO Optimized
        \n And Many More
    </string>
    <string name="e_commerce_website_desc">
Start selling your products online with our especially curated E-commerce website  with 100% online payment support. Boost up your revenue to 2X in 90 Days.

    </string>
    <string name="e_commerce_website_price">
        10,000
    </string>
    <string name="customized_website_list">
        Free Domain and Hosting
        \n SEO Optimized
        \n 10 Pager Website
        \n 5 Business Email Id
        \n And Many More
    </string>
    <string name="customized_website_desc">
We understand that you might have specific business requirements which needs to be addressed. We make websites as per your business needs.

    </string>
    <string name="customized_website_price">
        21,000
    </string>
    <string name="android_application_development_list">
        Wire-framing
        \n Application Screen Design
        \n Application Programming
        \n Application/Database Framework
        \n And Many More
    </string>
    <string name="android_application_development_desc">
    We develop apps that can be easily listed in playstore and is super fast and mobile friendly and 100% optimized for better use and clarity.

    </string>
    <string name="android_application_development_price">
        22,000
    </string>
    <string name="ios_application_development_list">
        Server-side Application Programming
        \n APIs Development
        \n Multi-stages and Multi-gadgets
        \n OS forms and Resolutions QA
        \n And Many More
    </string>
    <string name="ios_application_development_desc">
We build apps that can be listed easily on IOS platform. For better functionality of applications we tend to build it in such a way that is fast and easy to use by users.

    </string>
    <string name="ios_application_development_price">
        23,000
    </string>
    <string name="hybrid_application_development_list">
        Back-end QA Testing
        \n Cloud Setup
        \n Server-side Application Programming
        \n Application/Database Framework
        \n And Many More
    </string>
    <string name="hybrid_application_development_desc">
We are solutions for all your requirements. We develop applications on all the platforms specifically keen to your business requirements.

    </string>
    <string name="hybrid_application_development_price">
        24,000
    </string>
    <string name="facebook_and_instagram_list">
        Identify Business Goals
        \n Account Management
        \n Profile Optimization
        \n Creative Image
        \n And Many More
    </string>
    <string name="facebook_and_instagram_desc">
Facebook and Instagram is one such platform where you can grow continuously and at a good pace if worked out properly.
    </string>
    <string name="facebook_and_instagram_price">
        25,000
    </string>
</resources>