<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/adosy_logo"/>
            <TextView
                android:layout_marginBottom="15dp"
                android:background="@color/border"
                android:layout_width="match_parent"
                android:layout_height="12dp"/>

            <TextView
                android:text="⚫ Call Us"
                style="@style/txt_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/call_us"
                style="@style/txt_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginBottom="15dp"
                android:background="@color/border"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>


            <TextView
                android:text="⚫ Our Email"
                style="@style/txt_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/email"
                style="@style/txt_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginBottom="15dp"
                android:background="@color/border"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>


            <TextView
                android:text="⚫ Our Location"
                style="@style/txt_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/location"
                style="@style/txt_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginBottom="15dp"
                android:background="@color/border"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>


            <TextView
                android:text="⚫ Working Hours"
                style="@style/txt_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/working_hours"
                style="@style/txt_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>